k8s/test-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voter-frontend
  namespace: voter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: voter-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: voter-frontend
    spec:
      imagePullSecrets:
        - name: zot-pull
      containers:
        - name: voter-frontend
          image: zot.z65.nl/voter/frontend:coffee
          imagePullPolicy: Always
          #env:
            #- name: KUBE_NAMESPACE   # This does not work since it's a SPA
            #  value: voter
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: voter-frontend
  namespace: voter
spec:
  selector:
    app.kubernetes.io/name: voter-frontend
  ports:
    - name: http
      port: 8080
      targetPort: http

---
# Ok this is working now, let's go to the next phase
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voter-auth-service
  namespace: voter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: voter-auth-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: voter-auth-service
    spec:
      serviceAccountName: auth-service
      imagePullSecrets:
        - name: zot-pull
      containers:
        - name: auth-service
          image: zot.z65.nl/voter/auth-service:coffee
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: voter
spec:
  selector:
    app.kubernetes.io/name: voter-auth-service
  ports:
    - name: http
      port: 8080
      targetPort: http
